--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </main>
 
     <footer>
-        <p>&copy; Copyright 2024 EurOrbit</p>
+        <p>&copy; Copyright 2024 EurOrbit created by zwanski</p>
     </footer>
 
     <script src="scripts.js"></script>
